@@ -1,5 +1,24 @@
-The guy, John said, left early in the morning.
+I received the camera as a Christmas present from relatives.
 END.
+I received the camera as a Christmas present from relatives, and enjoy it a lot.
+END.
+The red ball is under the couch.
+where did that happen?
+where is the red ball?
+END.
+John made fun of Sarah.
+Who made fun of Sarah?
+John and Berd turned into monsters.
+who turned into monsters?
+Last night, I swam in the pool.
+Fred is dead?
+I saw the man you love.
+I want this one, not that one.
+what color is that book?
+They shut down the station.
+all the boys are here.
+truffles picked during the spring are tasty.
+The guy, John said, left early in the morning.
 The director is 65 years old.
 Kennedy has been killed.
 Kennedy was killed.
