@@ -11,6 +11,7 @@ New in version 1.1.1 (xxx?? 2009)
  * Tag verbs of questions as hypothetical.
  * Explicitly identify "filler subjects" aka "expletives"
  * Identify Prataxis clauses.
+ * Sort parses into ranked order.
 
 New in version 1.1.0 (2 July 2009)
  * Fix crash when generating scheme frames for opencog.
